data/all_generated_tests/raw_wast_tests/br_InvalidorInconsistentControlFlowGraph_824.wast
;; 5. **Test for Unreachable Code:**    - **Description**: A control structure followed by a `br` instruction that skips over subsequent code sections, testing for proper marking of unreachable code.    - **Constraint Checked**: Properly setting code as unreachable post `br`.    - **Relation to CFG**: Ensures proper marking of unreachable code segments in CFG.

(assert_invalid
  (module (func
    (block
      (br 0)
      (i32.const 1) ;; This code is expected to be unreachable
    )
  ))
  "unreachable code"
)